# py-columbia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.rst  api.Dockerfile  docker-compose.yml  entrypoint.sh  requirements-bleeding.txt  requirements.txt  setup.cfg  setup.py  tasks-scheduler.Dockerfile  tasks.Dockerfile
.circleci/: config.yml
ansible/: site.yml
columbia/: _version.py  api.py  app.py  app_util.py  columbia_api_v1.yaml  logging.py
columbia/api_v1/: hello_world.py  web_sites.py
columbia/cli/: db.py
columbia/config/: __init__.py  celery_config.py  common.py  flask_config.py  gunicorn_config.py
columbia/config/task_schedules/: __init__.py
columbia/db/: client.py  common_crawl.py  init_db.py  web_sites.py
columbia/models/: __init__.py
columbia/models/api_v1/: __init__.py  common_crawl.py
columbia/tasks/: __init__.py  app.py  common_crawl.py  hello_world.py  util.py
columbia/views/api_v1/: __init__.py  common_crawl.py
docs/: conf.py  index.rst
integration_tests/: docker-compose.dev.yml  docker-compose.yml  integration_runner.py  test_data.yaml
tests/: conftest.py
